--- a/owasp-jersey/pom.xml
+++ b/owasp-jersey/pom.xml
@@ -187,6 +187,11 @@ jackson preferred on Moxy
             <version>3.0.0</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.5</version>
+        </dependency>
     </dependencies>
 
     <build>
